fix(home-page): fix text overflowing into next section (#59)

--- a/src/scss/Pages/HomePage.scss
+++ b/src/scss/Pages/HomePage.scss
@@ -108,8 +108,8 @@
   background-color: $base2;
   color: $base02;
   display: flex;
+  padding: 60px 0 60px 0;
   flex-direction: column;
-  height: 100vh;
   z-index: 2;
 }
 
@@ -140,12 +140,13 @@
   border-radius: 20px;
   color: $base02;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr auto auto;
   flex-direction: column;
   font-size: 25px;
   justify-content: flex-start;
   position: relative;
   padding: 5px;
+  margin: 5px;
 
   & > svg {
     margin: auto;
